syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "ExpondoDadosGRPC";
option objc_class_prefix = "HLW";

package br.com.zup;

service ExpondoDadosGRPCService {
  rpc send (ExpondoDadosGRPCRequest) returns (ExpondoDadosGRPCReply) {}

  rpc calculaFrete(CalculaFreteRequest) returns (CalculaFreteResponse) {}
}

message CalculaFreteRequest {
  string cep = 1;
}

message CalculaFreteResponse {
  double valor = 1;
  string cep = 2;
}

message ExpondoDadosGRPCRequest {
  string name = 1;
}

message ExpondoDadosGRPCReply {
  string message = 1;
}